[package]
name = "rumi"
version = "0.1.0"
edition = "2021"
authors = ["Harsh Pratap Singh <harshpratapsingh821@gmail.com>"]
description = "A privacy-preserving discovery service design for mapping distinct identifiers to IDs without revealing any information to the server!"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full", "tracing", "rt-multi-thread"] }
tonic = "0.12.3"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
p256 = { version = "0.13", features = ["arithmetic", "hash2curve", "serde"] }
hex = "0.4"
sha2 = "0.10"
zeroize = { version = "1.5", features = ["derive"] }
bincode = "1.3"
prost = "0.13.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.15"
console-subscriber = "0.4.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-console = "0.1.13"

[build-dependencies]
tonic-build = "0.12.3"

[profile.release]
debug = true

[[bench]]
name = "oram_benchmarks"
harness = false

[build]
rustflags = ["--cfg", "tokio_unstable"]
