[package]
name = "rumi"
version = "0.1.0"
edition = "2021"
authors = ["Harsh Pratap Singh <harshpratapsingh821@gmail.com>"]
description = "A privacy-preserving discovery service design for mapping distinct identifiers to IDs without revealing any information to the server!"
license = "MIT"
repository = "https://github.com/harsh-ps-2003/rumi"
documentation = "https://docs.rs/rumi"
readme = "README.md"
keywords = ["privacy", "cryptography", "oram", "discovery-service", "zero-knowledge"]
categories = ["cryptography"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
doc = false  # Don't include binaries in docs

[[bin]]
name = "client"
path = "src/bin/client.rs"
doc = false  # Don't include binaries in docs

[dependencies]
tokio = { version = "1.0", features = ["full", "tracing", "rt-multi-thread"] }
tonic = "0.12.3"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
p256 = { version = "0.13", features = ["arithmetic", "hash2curve", "serde"] }
hex = "0.4.3"
sha2 = "0.10"
zeroize = { version = "1.5", features = ["derive"] }
bincode = "1.3"
prost = "0.13.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-attributes = "0.1.26"
console = "0.15"
console-subscriber = "0.4.1"
prometheus = { version = "0.13" }
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
rs_merkle = "1.4"
ark-ff = "0.5"
ark-ec = "0.5"
ark-std = "0.5"
ark-bn254 = "0.5"
ark-r1cs-std = "0.5"
ark-relations = "0.5"
ark-snark = "0.5"
ark-groth16 = "0.5"
ark-serialize = "0.5"
dirs = "5.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-console = "0.1.13"
proptest = "1.4.0"

[build-dependencies]
tonic-build = "0.12.3"

[profile.release]
debug = true

[[bench]]
name = "oram_benchmarks"
harness = false

[build]
rustflags = ["--cfg", "tokio_unstable"]
